2010-01-12  Andreia Gaita  <avidigal@novell.com>

	* System.Windows.Browser/ScriptableArraysTest.cs: Added test for
	array index access

2010-01-11  Sebastien Pouliot  <sebastien@ximian.com> 

	* System.Net/CookieContainerTest.cs: New. Unit tests for 
	CookieContainer (that I forgot to commit a few weeks ago)

2010-01-11  Sebastien Pouliot  <sebastien@ximian.com>

	* System.Net/WebClientTest.cs: Enable SL3 asserts. Add checks
	on streams properties wrt OpenWriteAsync. Add test case for 
	WriteStreamClosed

2010-01-11  Alan McGovern  <amcgovern@novell.com>

	* System.Windows.Data/BindingExpressionTest.cs: Implement and
	  add tests for the new ParentBinding and DataItem properties
	  in BindingExpression. 

	* moon-unit.mdp: update build files

2010-01-11  Alan McGovern  <amcgovern@novell.com>

	* System.Windows.Controls/ValidationTest.cs: Add missing
	  license header and put the Validation moon-unit tests in the
	  right place.

2010-01-11  Andreia Gaita  <avidigal@novell.com>

	* System.Windows.Browser/ScriptableArraysTest.cs: Added tests for
	custom array methods exposed by the bridge

2010-01-11  Alan McGovern  <amcgovern@novell.com>

	* System.Windows.Controls/ItemContainerGeneratorTest.cs:
	  ItemContainerGenerator is now good enough to enable for the
	  basic case. If anything breaks noticably, revert this
	  commit.

2010-01-11  Alan McGovern  <amcgovern@novell.com>

	* System.Windows.Controls/ItemsControlTestBase.cs:
	* System.Windows.Controls/ItemContainerGeneratorTest_Panel.cs:
	  Add a description of the test failure.

	* System.Windows.Controls/ItemContainerGeneratorTest.cs: Add
	  some extra tests for GeneratorPositionFromIndex and fix the
	  implementation.

2010-01-11  Alan McGovern  <amcgovern@novell.com>

	* moon-unit.mdp:
	* System.Windows.Media/ImageSourceConverterTest.cs: Implement
	  ImageSourceConverter properly and add moon-units for it.
	  SmoothHD now gets further.

2010-01-08  Mario Carrion  <mcarrion@novell.com>
